--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Barre de navigation -->
@@ -345,12 +345,12 @@
               style="max-width: 100%; max-height: 900px"
             />
             <!-- Bouton pour télécharger le CV -->
-            <!--<a
+            <a
               href="../../public/CV/Cv développeur web junior.pdf"
               download
               class="btn bouton_télécharger_cv"
               >Télécharger</a
-            >-->
+            >
           </div>
         </div>
       </div>
@@ -468,19 +468,19 @@
           />
           <!-- Bouton pour télécharger le CV -->
         </div>
-        <!--<div class="d-flex justify-content-center mt-4">
+        <div class="d-flex justify-content-center mt-4">
           <a
             href="../../public/Stage/Appréciation de stage Kickngo.pdf"
             download
             class="btn bouton_télécharger_cv"
             >Télécharger</a
           >
-        </div>-->
+        </div>
       </div>
     </section>
 
     <!-- Section Contact -->
-    <!--<section id="contact" class="py-5 bg-light">
+    <section id="contact" class="py-5 bg-light">
       <div class="container">
         <h2 class="text-center">Contact</h2>
         <form id="contact-form" onsubmit="sendEmail(event)">
@@ -521,7 +521,7 @@
           </div>
         </form>
       </div>
-    </section>-->
+    </section>
 
     <!-- Footer -->
     <footer class="text-center py-4 bg-dark text-white">
@@ -531,7 +531,7 @@
     <!-- Lien vers Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!--<script>
+    <script>
       function sendEmail(event) {
         event.preventDefault(); // Empêche le rechargement de la page
 
@@ -553,6 +553,6 @@
         // Réinitialiser le formulaire
         document.getElementById("contact-form").reset();
       }
-    </script>-->
+    </script>
   </body>
 </html>
