--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
           >
             <!-- Intégrer l'image du CV -->
             <img
-              src="../../image/Cv développeur web junior portfolio.jpg"
+              src="./image/Cv développeur web junior portfolio.jpg"
               alt="CV développeur web junior"
               class="img-fluid mb-3 cv-image"
               style="max-width: 100%; max-height: 900px"
@@ -364,7 +364,7 @@
           <div class="col-lg-6 mt-5">
             <div class="card">
               <img
-                src="../../image/Projet zoo.png"
+                src="./image/Projet zoo.png"
                 class="card-img-top"
                 alt="Projet 1"
               />
@@ -415,7 +415,7 @@
           <div class="col-lg-6 d-flex mt-5">
             <div class="card">
               <img
-                src="../../image/Projet essence pas chere.png"
+                src="./image/Projet essence pas chere.png"
                 class="card-img-top"
                 alt="Projet 2"
               />
@@ -461,7 +461,7 @@
         <div class="col-md-12 d-flex justify-content-center">
           <!-- Intégrer l'image du CV -->
           <img
-            src="../../image/Appréciation de stage Kickngo.jpg"
+            src="./image/Appréciation de stage Kickngo.jpg"
             alt="CV développeur web junior"
             class="img-fluid cv-image"
             style="max-height: 800px"
