--- a/index.html
+++ b/index.html
@@ -339,10 +339,10 @@
           >
             <!-- Intégrer l'image du CV -->
             <img
-              src="./public/image/Cv développeur web junior portfolio.jpg"
+              src="public/image/Cv développeur web junior portfolio.jpg"
               alt="CV développeur web junior"
               class="img-fluid mb-3 cv-image"
-              style="max-width: 100%; max-height: 900px"
+              style="max-width: 100%; max-height: 900px; border: solid 2px blue;"
             />
             <!-- Bouton pour télécharger le CV -->
             <a
