--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             />
             <!-- Bouton pour télécharger le CV -->
             <a
-              href="../../public/CV/Cv développeur web junior.pdf"
+              href="cv/Cv développeur web junior.pdf"
               download
               class="btn bouton_télécharger_cv"
               >Télécharger</a
