--- a/index.html
+++ b/index.html
@@ -342,11 +342,11 @@
               src="image/Cv développeur web junior portfolio.jpg"
               alt="CV développeur web junior"
               class="img-fluid mb-3 cv-image"
-              style="max-width: 100%; max-height: 900px; border: solid 2px blue;"
+              style="max-width: 100%; max-height: 900px"
             />
             <!-- Bouton pour télécharger le CV -->
             <a
-              href="cv/Cv développeur web junior.pdf"
+              href="./cv/Cv développeur web junior.pdf"
               download
               class="btn bouton_télécharger_cv"
               >Télécharger</a
@@ -470,7 +470,7 @@
         </div>
         <div class="d-flex justify-content-center mt-4">
           <a
-            href="../../public/Stage/Appréciation de stage Kickngo.pdf"
+            href="./stage/Appréciation de stage Kickngo.pdf"
             download
             class="btn bouton_télécharger_cv"
             >Télécharger</a
