ajout icon et plusieurs modif

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mon Portfolio</title>
+    <title>Portfolio Lavolé Kiéran</title>
     <!-- Lien vers Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="./image/pc-portable.ico.png" type="image/x-icon">
   </head>
   <body>
     <!-- Barre de navigation -->
@@ -17,6 +18,10 @@
       class="navbar navbar-expand-lg navbar-light fixed-top barre_navigation"
     >
       <div class="container-fluid">
+         <!-- Logo -->
+    <a class="navbar-brand" href="#">
+      <img src="./image/pc-portable.ico.png" alt="Logo portfolio" width="48" height="48">
+    </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -135,7 +140,7 @@
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  90%
+                  Confirmé
                 </div>
               </div>
             </div>
@@ -150,7 +155,7 @@
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  90%
+                  Confirmé
                 </div>
               </div>
             </div>
@@ -165,7 +170,7 @@
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  70%
+                  Avancé
                 </div>
               </div>
             </div>
@@ -180,7 +185,7 @@
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  60%
+                  Avancé
                 </div>
               </div>
             </div>
@@ -198,7 +203,7 @@
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  60%
+                  Avancé
                 </div>
               </div>
             </div>
@@ -213,7 +218,7 @@
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  50%
+                  Avancé
                 </div>
               </div>
             </div>
@@ -228,7 +233,7 @@
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  20%
+                  Débutant
                 </div>
               </div>
             </div>
@@ -246,7 +251,7 @@
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  60%
+                  Avancé
                 </div>
               </div>
             </div>
@@ -261,7 +266,7 @@
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  50%
+                  Intermédiaire
                 </div>
               </div>
             </div>
@@ -279,7 +284,7 @@
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  60%
+                  Avancé
                 </div>
               </div>
             </div>
@@ -294,7 +299,7 @@
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  60%
+                  Avancé
                 </div>
               </div>
             </div>
@@ -309,7 +314,7 @@
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  60%
+                  Avancé
                 </div>
               </div>
             </div>
@@ -327,7 +332,7 @@
                   aria-valuemin="0"
                   aria-valuemax="100"
                 >
-                  70%
+                  Confirmé
                 </div>
               </div>
             </div>
@@ -373,31 +378,31 @@
                   Projet Zoo Arcadia Full-stack responsive
                 </h4>
                 <div class="div_techno">
-                  <ul class="card-text">
+                  <ul class="card-text text-center">
                     <h5 class="fw-semibold">Front-end</h5>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>ReactJS</li>
                   </ul>
-                  <ul class="card-text">
+                  <ul class="card-text text-center">
                     <h5 class="fw-semibold">Back-end</h5>
                     <li>ExpressJS</li>
                   </ul>
                 </div>
                 <div class="div_techno">
-                  <ul class="card-text">
+                  <ul class="card-text text-center">
                     <h5 class="fw-semibold">Base de données</h5>
                     <li>MySQL</li>
                     <li>MongoDB</li>
                   </ul>
-                  <ul class="card-text">
+                  <ul class="card-text text-center">
                     <h5 class="fw-semibold">Déploiement</h5>
                     <li>Vercel</li>
                     <li>Railway</li>
                   </ul>
                 </div>
                 <div class="div_techno">
-                  <ul class="card-text">
+                  <ul class="card-text text-center">
                     <h5 class="fw-semibold">Versionning</h5>
                     <li>Git/GitHub</li>
                   </ul>
@@ -424,19 +429,19 @@
                   Projet essence pas chère Front-end responsive
                 </h4>
                 <div class="div_techno">
-                  <ul class="card-text">
+                  <ul class="card-text text-center">
                     <h5 class="fw-semibold">Front-end</h5>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaSript</li>
                   </ul>
-                  <ul class="card-text">
+                  <ul class="card-text text-center">
                     <h5 class="fw-semibold">Déploiement</h5>
                     <li>Vercel</li>
                   </ul>
                 </div>
                 <div class="div_techno">
-                  <ul class="card-text">
+                  <ul class="card-text text-center">
                     <h5 class="fw-semibold">Versionning</h5>
                     <li>Git/GitHub</li>
                   </ul>
