ajout target blank pour nouvel onglet

--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@
                   <a
                     href="https://zoo-arcadia-zoo.vercel.app/"
                     class="btn bouton_télécharger_cv"
+                    target="_blank"
                     >Lien du projet</a
                   >
                 </div>
@@ -450,6 +451,7 @@
                   <a
                     href="https://essence-pas-chere.vercel.app/"
                     class="btn bouton_télécharger_cv"
+                    target="_blank"
                     >Lien du projet</a
                   >
                 </div>
