--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                   <a
                     href="https://zoo-arcadia-zoo.vercel.app/"
                     class="btn bouton_télécharger_cv"
-                    
+                    target="_blank"
                     >Lien du projet</a
                   >
                 </div>
